Thu Jan  6 11:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Adapter.{h,cpp}:
        * tao/Adapter_Factory.{h,cpp}:
        * tao/Adapter_Registry.{h,cpp}:
          Moved TAO_Adapter_Registry and TAO_Adapter_Factory to its own file

        * tao/ORB_Core.{h,cpp}:
        * tao/Internal.cpp:
        * tao/IORTable/Table_Adapter.h:
        * tao/PortableServer/Object_Adapter.h:
          Updated includes because of change above

        * tao/Makefile.am:
        * tao/tao.mpc:
          Added new files above

Thu Jan  6 09:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

          Checkin of separate footprint issue. This has no influence at the
          other code, so committed this. When the POA refactoring is merged
          the ImplRepo code will move to another new library

        * tao/PortableServer/ImplRepo.pidl:
        * tao/PortableServer/ServerObject.pidl:
        * tao/PortableServer/ImplRepoA.cpp:
        * tao/PortableServer/ImplRepoC.{h,cpp,i,inl}:
        * tao/PortableServer/ImplRepoS.{h,cpp,i,inl}:
          Moved the ServerObject interface to its own idl file so
          that when someone just uses the ServerObject stub and
          the ImplRepo proxy, he doesn't link in the ImplRepo stub
          which is big.

        * tao/PortableServer/ServerObjectA.cpp:
        * tao/PortableServer/ServerObjectC.{h,cpp,inl}:
        * tao/PortableServer/ServerObjectS.{h,cpp,inl}:
          New generated files

        * tao/PortableSever/ImplRepo_i.h:
          Replaced include of ImplRepoS.h with ServerObjectS.h

        * tao/PortableServer/POA.cpp:
          Added include of ImplRepoC.h

        * tao/Makefile.am:
          Added new files above

Thu Jan  6 09:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PortableServer_include.pidl:
        * tao/PortableServer/PortableServer_includeS.h:
        * tao/PortableServer/PortableServer_includeC.h: